--- a/public/index.html
+++ b/public/index.html
@@ -1,191 +1,280 @@
-
 <!doctype html>
-<html>
+<html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Chat Master - Node</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ChatNodo — WhatsApp Style</title>
+
+  <!-- Estilos -->
+  <link rel="stylesheet" href="/css/style.css" />
+
   <style>
-    :root { --bg:#0f0f12; --panel:#17171b; --muted:#999; --accent:#7b61ff; }
-    body{font-family:Inter, system-ui, Arial; background:var(--bg); color:#fff; margin:0; padding:24px;}
-    .wrap{max-width:960px;margin:0 auto;}
-    header{display:flex;align-items:center;gap:16px;margin-bottom:20px;}
-    header h1{margin:0;font-size:20px;}
-    .panel{background:var(--panel); padding:16px;border-radius:10px;}
-    .grid{display:grid;grid-template-columns:320px 1fr; gap:16px;}
-    .users{display:flex;flex-direction:column;gap:8px;}
-    .messages{height:60vh; overflow:auto; padding:12px; border-radius:8px; background:#0b0b0c;}
-    .msg{margin-bottom:10px;}
-    form{display:flex;gap:8px;margin-top:8px;}
-    input, button{padding:8px;border-radius:8px;border:1px solid #222;background:#fff;color:#000;}
-    .muted{color:var(--muted); font-size:13px;}
-    .hidden{display:none;}
+    /* Mini-reset + fuentes */
+    :root{
+      --bg:#e9edef; --panel:#ffffff; --accent:#25D366; --muted:#8a9398;
+      --me:#DCF8C6; --them:#ffffff; --header:#075E54; --text:#111827;
+      --sidebar:#f6f6f6;
+    }
+    *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Segoe UI,Arial,Helvetica,sans-serif}
+    html,body,#app{height:100%;background:var(--bg);color:var(--text)}
+    a{color:inherit;text-decoration:none}
+    /* Layout */
+    #app{height:100vh;display:flex;align-items:stretch;gap:18px;padding:18px}
+
+    /* Sidebar */
+    .sidebar{width:340px;background:var(--sidebar);border-radius:12px;display:flex;flex-direction:column;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.07)}
+    .sidebar .top{display:flex;align-items:center;justify-content:space-between;padding:14px 16px;border-bottom:1px solid #e6e6e6}
+    .brand{display:flex;gap:12px;align-items:center}
+    .brand h1{font-size:20px;color:var(--header);font-weight:700}
+    .profile{display:flex;gap:12px;align-items:center}
+    .avatar{width:44px;height:44px;border-radius:50%;background:linear-gradient(135deg,#cfe9d6,#8fd6a0);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700}
+    .me-info{display:flex;flex-direction:column}
+    .me-info .name{font-weight:600}
+    .me-info .small{font-size:12px;color:var(--muted)}
+
+    /* Search */
+    .search{padding:10px 14px;border-bottom:1px solid #eee}
+    .search input{width:100%;padding:10px;border-radius:20px;border:1px solid #e5e5e5;background:#fff}
+
+    /* List */
+    .list{overflow:auto;padding:10px 8px;flex:1}
+    .item{display:flex;gap:12px;align-items:center;padding:10px;border-radius:8px;cursor:pointer}
+    .item:hover{background:#f4f7f6}
+    .item .meta{flex:1;display:flex;flex-direction:column}
+    .item .meta .title{font-weight:600}
+    .item .meta .desc{font-size:13px;color:var(--muted)}
+    .dot{width:10px;height:10px;border-radius:50%}
+    .dot.online{background:#34d859}
+    .dot.offline{background:#cfcfcf}
+
+    /* Main chat area */
+    .chat{flex:1;display:flex;flex-direction:column;border-radius:12px;background:#fff;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
+    .chat .head{display:flex;align-items:center;gap:12px;padding:14px;border-bottom:1px solid #eee;background:linear-gradient(90deg,var(--header),#128C7E);color:#fff}
+    .chat .head .title{font-weight:700}
+    .chat .messages{flex:1;padding:18px;overflow:auto;background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" opacity="0.03"><rect width="200" height="200" fill="%23ffffff"/></svg>') #eaf3ee}
+    .msg{max-width:72%;padding:10px 12px;border-radius:8px;margin-bottom:8px;box-shadow:0 1px 0 rgba(0,0,0,0.03)}
+    .msg.me{margin-left:auto;background:var(--me)}
+    .msg.other{background:var(--them)}
+    .msg .meta{font-size:12px;color:var(--muted);margin-bottom:6px}
+    .composer{display:flex;gap:10px;padding:12px;border-top:1px solid #f0f0f0;align-items:center}
+    .composer input{flex:1;padding:10px;border-radius:20px;border:1px solid #e6e6e6}
+    .btn{background:var(--header);color:#fff;border:none;padding:9px 14px;border-radius:8px;cursor:pointer}
+    .btn.ghost{background:transparent;color:var(--header);border:1px solid rgba(255,255,255,0.12)}
+
+    /* Emoji picker small */
+    .emoji-picker{position:absolute;right:40px;bottom:90px;background:#fff;padding:8px;border:1px solid #eee;border-radius:8px;box-shadow:0 8px 24px rgba(0,0,0,0.12);display:grid;grid-template-columns:repeat(8,1fr);gap:6px;z-index:50}
+    .emoji{font-size:20px;cursor:pointer;padding:6px;text-align:center}
+    /* Responsive */
+    @media(max-width:900px){
+      #app{padding:8px}
+      .sidebar{display:none}
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>Chat Master</h1>
-      <div class="muted">Node + SQLite + Socket.io</div>
-    </header>
-
-    <div id="authPanel" class="panel">
-      <h3>Accede o regístrate</h3>
-      <div id="authError" class="muted"></div>
-      <form id="registerForm">
-        <input id="regUser" placeholder="Usuario (registro)" required />
-        <input id="regPass" type="password" placeholder="Contraseña" required />
-        <button type="submit">Registrarse</button>
-      </form>
-      <hr/>
-      <form id="loginForm">
-        <input id="logUser" placeholder="Usuario (login)" required />
-        <input id="logPass" type="password" placeholder="Contraseña" required />
-        <button type="submit">Iniciar sesión</button>
-      </form>
-    </div>
-
-    <div id="chatArea" class="panel hidden">
-      <div style="display:flex;justify-content:space-between;align-items:center">
-        <div>
-          <strong id="meName"></strong>
-          <div class="muted">Conectado</div>
-        </div>
-        <button id="logoutBtn">Cerrar sesión</button>
-      </div>
-
-      <div class="grid" style="margin-top:12px">
-        <div>
-          <div class="muted">Usuarios (lista simple)</div>
-          <div class="users" id="usersList"></div>
+  <div id="app">
+    <!-- SIDEBAR -->
+    <aside class="sidebar">
+      <div class="top">
+        <div class="brand">
+          <div class="avatar">CN</div>
+          <div>
+            <h1>ChatNodo</h1>
+            <div style="font-size:12px;color:var(--muted)">Node + Socket.io</div>
+          </div>
         </div>
         <div>
-          <div class="messages" id="messages"></div>
-          <form id="msgForm">
-            <input id="msgInput" placeholder="Escribe un mensaje..." autocomplete="off" />
-            <button>Enviar</button>
-          </form>
+          <button id="new-group" class="btn">Nuevo</button>
         </div>
       </div>
-    </div>
+
+      <div class="search">
+        <input id="search" placeholder="Buscar contactos o grupos..." />
+      </div>
+
+      <div style="padding:10px;border-bottom:1px solid #f0f0f0;display:flex;align-items:center;gap:10px">
+        <div class="avatar" id="me-avatar">ME</div>
+        <div class="me-info">
+          <div class="name" id="me-name">Invitado</div>
+          <div class="small" id="me-presence">Desconectado</div>
+        </div>
+      </div>
+
+      <div class="list" id="contacts-list">
+        <!-- contactos se inyectan aquí -->
+      </div>
+    </aside>
+
+    <!-- CHAT AREA -->
+    <main class="chat">
+      <div class="head">
+        <div style="display:flex;align-items:center;gap:12px">
+          <div class="avatar" id="chat-avatar">G</div>
+          <div>
+            <div class="title" id="chat-name">Global</div>
+            <div style="font-size:13px" id="chat-sub">Chat público</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="messages" id="messages">
+        <!-- mensajes -->
+      </div>
+
+      <div class="composer">
+        <button id="emoji-btn" class="btn.ghost">😀</button>
+        <input id="message-input" placeholder="Escribe un mensaje..." />
+        <button id="send-btn" class="btn">Enviar</button>
+      </div>
+    </main>
   </div>
+
+  <!-- Emoji picker -->
+  <div id="emoji-picker" class="emoji-picker" style="display:none"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
+    // ====== Client minimal integrado con tu backend ======
     const socket = io();
-    const authPanel = document.getElementById('authPanel');
-    const chatArea = document.getElementById('chatArea');
-    const registerForm = document.getElementById('registerForm');
-    const loginForm = document.getElementById('loginForm');
-    const authError = document.getElementById('authError');
-    const meName = document.getElementById('meName');
-    const logoutBtn = document.getElementById('logoutBtn');
-    const msgForm = document.getElementById('msgForm');
-    const msgInput = document.getElementById('msgInput');
-    const messagesDiv = document.getElementById('messages');
-    const usersList = document.getElementById('usersList');
-
     let me = null;
-    let users = {};
+    let current = {type:"global"};
 
-    function showError(m){
-      authError.textContent = m;
-      setTimeout(()=> authError.textContent = '', 4000);
+    // helpers
+    async function api(path, method="GET", body){
+      const opts = {method, headers:{}};
+      if (body){ opts.headers["Content-Type"]="application/json"; opts.body=JSON.stringify(body); }
+      const res = await fetch("/api"+path, opts);
+      return res.json();
     }
 
-    async function whoami(){
-      const res = await fetch('/api/me');
-      const j = await res.json();
-      if (j.user){ me = j.user; onLogin(); } else { onLogout(); }
-    }
+    // UI refs
+    const contactsList = document.getElementById("contacts-list");
+    const messagesEl = document.getElementById("messages");
+    const meNameEl = document.getElementById("me-name");
+    const mePresenceEl = document.getElementById("me-presence");
+    const chatNameEl = document.getElementById("chat-name");
+    const chatSubEl = document.getElementById("chat-sub");
+    const input = document.getElementById("message-input");
+    const sendBtn = document.getElementById("send-btn");
+    const emojiBtn = document.getElementById("emoji-btn");
+    const emojiPicker = document.getElementById("emoji-picker");
 
-    function onLogin(){
-      authPanel.classList.add('hidden');
-      chatArea.classList.remove('hidden');
-      meName.textContent = me.username;
-      fetchMessages();
-    }
+    const EMOJIS = ["😀","😂","😍","😅","😎","👍","🔥","❤️","🎉","🤝","👏","🤖","🙌","😢","😡","🤩"];
 
-    function onLogout(){
-      authPanel.classList.remove('hidden');
-      chatArea.classList.add('hidden');
-      me = null;
-      messagesDiv.innerHTML = '';
+    // build emoji picker
+    function buildEmojis(){
+      emojiPicker.innerHTML = "";
+      EMOJIS.forEach(e=>{
+        const d = document.createElement("div");
+        d.className="emoji";
+        d.textContent = e;
+        d.onclick = ()=> { input.value += e; emojiPicker.style.display="none"; input.focus(); }
+        emojiPicker.appendChild(d);
+      });
     }
+    buildEmojis();
 
-    registerForm.addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      const username = document.getElementById('regUser').value.trim();
-      const password = document.getElementById('regPass').value;
-      const res = await fetch('/api/register', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ username, password }) });
-      const j = await res.json();
-      if (!res.ok) return showError(j.error || 'Error');
-      me = j; onLogin();
+    emojiBtn.addEventListener("click", ()=> {
+      emojiPicker.style.display = emojiPicker.style.display === "none" ? "grid" : "none";
     });
 
-    loginForm.addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      const username = document.getElementById('logUser').value.trim();
-      const password = document.getElementById('logPass').value;
-      const res = await fetch('/api/login', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ username, password }) });
-      const j = await res.json();
-      if (!res.ok) return showError(j.error || 'Error');
-      me = j; onLogin();
-    });
+    sendBtn.addEventListener("click", sendMessage);
+    input.addEventListener("keydown", (e)=> { if (e.key==="Enter") sendMessage(); });
 
-    logoutBtn.addEventListener('click', async ()=>{
-      await fetch('/api/logout', { method:'POST' });
-      onLogout();
-    });
-
-    async function fetchMessages(){
-      const res = await fetch('/api/messages');
-      const msgs = await res.json();
-      messagesDiv.innerHTML = '';
-      msgs.forEach(addMessage);
+    async function loadMe(){
+      const r = await api("/me");
+      me = r.user;
+      meNameEl.textContent = me ? me.username : "Invitado";
+      mePresenceEl.textContent = me ? "En línea" : "Desconectado";
+      if (me) socket.emit("online", me.id);
     }
 
-    function addMessage(m){
-      const d = document.createElement('div');
-      d.className = 'msg';
-      d.innerHTML = '<strong>' + escapeHtml(m.username) + '</strong>: ' + escapeHtml(m.text) + '<div class="muted" style="font-size:12px">'+ (new Date(m.created_at || Date.now())).toLocaleString() +'</div>';
-      messagesDiv.appendChild(d);
-      messagesDiv.scrollTop = messagesDiv.scrollHeight;
-    }
+    async function loadContacts(){
+      const cs = me ? await api("/contacts") : [];
+      contactsList.innerHTML = "";
+      // global entry
+      const g = document.createElement("div");
+      g.className="item";
+      g.innerHTML = '<div class="meta"><div class="title">Global</div><div class="desc">Chat público</div></div>';
+      g.onclick = ()=> openGlobal();
+      contactsList.appendChild(g);
 
-    msgForm.addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      if (!me) return showError('No estás autenticado');
-      const text = msgInput.value.trim();
-      if (!text) return;
-      // send via REST so server can check session
-      const res = await fetch('/api/messages', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ text }) });
-      if (!res.ok){ const j = await res.json(); return showError(j.error || 'Error al enviar'); }
-      msgInput.value = '';
-    });
-
-    socket.on('message', (m) => {
-      addMessage(m);
-      // add to users list simple
-      users[m.username] = true;
-      renderUsers();
-    });
-
-    function renderUsers(){
-      usersList.innerHTML = '';
-      Object.keys(users).forEach(u => {
-        const el = document.createElement('div');
-        el.textContent = u;
-        usersList.appendChild(el);
+      cs.forEach(c=>{
+        const el = document.createElement("div");
+        el.className = "item";
+        el.innerHTML = `<div style="width:44px"><div class="avatar" style="background:#cdebdc">${c.username[0].toUpperCase()}</div></div>
+                        <div class="meta"><div class="title">${c.username} ${c.online?'<span style="color:#34d859;font-size:12px">●</span>':''}</div>
+                        <div class="desc">${c.online? 'En línea' : 'Desconectado'}</div></div>`;
+        el.onclick = ()=> openPrivate(c.id,c.username);
+        contactsList.appendChild(el);
       });
     }
 
-    function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, function(m){ return ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":"&#39;"})[m]; });
+    async function loadGlobal(){
+      current = {type:"global"};
+      chatNameEl.textContent = "Global";
+      chatSubEl.textContent = "Chat público";
+      messagesEl.innerHTML = "";
+      const msgs = await api("/messages");
+      msgs.forEach(render);
+      scroll();
     }
 
-    // initial check
-    whoami();
+    function render(m){
+      // unify shape for private/group/global messages
+      const el = document.createElement("div");
+      const isMe = (me && (m.user_id === me.id || m.from === me.id));
+      el.className = "msg " + (isMe ? "me":"other");
+      const meta = document.createElement("div");
+      meta.className = "meta";
+      meta.textContent = (m.username || ("User "+(m.from||m.user_id || ""))) + " • " + new Date(m.created_at).toLocaleString();
+      const body = document.createElement("div");
+      body.textContent = m.text || m.message || m.msg || "";
+      el.appendChild(meta);
+      el.appendChild(body);
+      messagesEl.appendChild(el);
+    }
+
+    function scroll(){ messagesEl.scrollTop = messagesEl.scrollHeight; }
+
+    async function sendMessage(){
+      const text = input.value.trim();
+      if (!text) return;
+      if (current.type==="global"){
+        const r = await api("/messages","POST",{ text });
+        socket.emit("message", r);
+        render(r);
+      } else if (current.type==="private"){
+        await api("/private/send","POST",{ to: current.withId, text });
+      } else if (current.type==="group"){
+        await api("/groups/send","POST",{ group_id: current.id, text });
+      }
+      input.value="";
+      scroll();
+    }
+
+    function openPrivate(id, name){
+      current = {type:"private", withId:id};
+      chatNameEl.textContent = name;
+      chatSubEl.textContent = "Chat privado";
+      messagesEl.innerHTML = "";
+      api("/private/"+id).then(arr=>{ arr.forEach(render); scroll(); });
+      socket.emit("join_private",{ me: me.id, other: id });
+    }
+
+    function openGlobal(){ loadGlobal(); socket.emit("join_private",{me:me?me.id:0, other:0}); }
+
+    socket.on("message", (m)=> { if (current.type==="global"){ render(m); scroll(); } });
+    socket.on("private_message", (m)=> { if (current.type==="private" && (m.from===current.withId || m.to===current.withId)){ render(m); scroll(); }});
+    socket.on("group_message", (m)=> { if (current.type==="group" && m.group_id===current.id){ render(m); scroll(); }});
+    socket.on("presence_update", (p)=> { loadContacts(); });
+
+    // init
+    (async ()=> {
+      await loadMe();
+      await loadContacts();
+      await loadGlobal();
+    })();
   </script>
 </body>
 </html>
