--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,116 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ChatNodo — Corregido</title>
   <style>
-    :root{ --bg:#e9edef; --panel:#fff; --accent:#25D366; --muted:#8a9398; --me:#DCF8C6; --them:#ffffff; --header:#075E54; --text:#111827; --dark-bg:#0f1720; --dark-panel:#111827; --dark-text:#e6eef3; }
+    :root{
+  --bg: #e9edef; --panel: #fff; --accent:#25D366; --muted:#8a9398; 
+  --me:#DCF8C6; --them:#ffffff; --header:#075E54; --text:#111827;
+  --dark-bg: #0f1720; --dark-panel:#111827; --dark-text:#e6eef3;
+}
+
     *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Segoe UI,Arial,Helvetica,sans-serif}
-    html,body,#root{height:100%}
+    html,body,#root{height:100%;}
     body{height:100vh;background:var(--bg);color:var(--text)}
+
+    /* App layout */
     .app{height:100vh;display:flex;gap:18px;padding:18px}
+
+    /* Sidebar */
     .sidebar{width:320px;background:var(--panel);border-radius:12px;display:flex;flex-direction:column;overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.07)}
     .top{display:flex;align-items:center;justify-content:space-between;padding:12px;border-bottom:1px solid #eee}
     .brand{display:flex;align-items:center;gap:10px}
     .logo{width:44px;height:44;border-radius:50%;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg,#cfe9d6,#8fd6a0);color:#fff;font-weight:700}
     .search{padding:10px;border-bottom:1px solid #eee}
     .search input{width:100%;padding:8px;border-radius:20px;border:1px solid #e6e6e6}
+
     .profile{display:flex;align-items:center;gap:12px;padding:12px;border-bottom:1px solid #eee}
     .me-avatar{width:56px;height:56;border-radius:50%;background:#ddd;display:flex;align-items:center;justify-content:center;font-weight:700;overflow:hidden}
     .me-avatar img{width:100%;height:100%;object-fit:cover}
     .me-info .name{font-weight:700}
     .small{font-size:12px;color:var(--muted)}
+
     .tools{display:flex;gap:8px;padding:10px;border-bottom:1px solid #f0f0f0}
-    .list{overflow:auto;padding:8px;flex:1;min-height:0}
+    .list{overflow:auto;padding:8px;flex:1;min-height:0} /* min-height:0 so it can scroll */
     .item{display:flex;gap:10px;align-items:center;padding:8px;border-radius:8px;cursor:pointer}
     .item:hover{background:#f4f7f6}
+    .item .meta{flex:1}
+    .badge{background:#ff3b30;color:#fff;padding:2px 6px;border-radius:12px;font-size:12px}
+
+    /* Chat area */
+    .chat{flex:1;display:flex;flex-direction:column;border-radius:12px;background:var(--panel);overflow:hidden;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
+    .chat .head{display:flex;align-items:center;gap:12px;padding:14px;border-bottom:1px solid #eee;background:linear-gradient(90deg,var(--header),#128C7E);color:#fff}
+    /* Fondo del área de mensajes */
+.messages {
+  flex: 1;
+  padding: 16px;
+  overflow: auto;
+  background: var(--chat-bg);
+  min-height: 0;
+}
+
+.msg {
+  max-width: 72%;
+  padding: 10px 12px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03);
+  word-break: break-word;
+}
+
+.msg .meta {
+  font-size: 12px;
+  color: var(--muted);
+  margin-bottom: 6px;
+}
+
+/* Mensajes */
+.msg.me {
+  margin-left: auto;
+  background: var(--msg-me);
+}
+
+.msg.other {
+  background: var(--msg-other);
+}
+
+/* Modo oscuro */
+body.dark .messages {
+  background: var(--chat-bg-dark);
+}
+
+body.dark .msg.me {
+  background: var(--msg-me-dark);
+}
+
+body.dark .msg.other {
+  background: var(--msg-other-dark);
+}
+
+body.dark .msg {
+  color: var(--dark-text);
+}
+
+
     .msg{max-width:72%;padding:10px 12px;border-radius:8px;margin-bottom:8px;box-shadow:0 1px 0 rgba(0,0,0,0.03);word-break:break-word}
+    .msg .meta{font-size:12px;color:var(--muted);margin-bottom:6px}
+
     .composer{display:flex;gap:10px;padding:12px;border-top:1px solid #f0f0f0;align-items:center}
     .composer input{flex:1;padding:10px;border-radius:20px;border:1px solid #e6e6e6}
     .btn{background:var(--header);color:#fff;border:none;padding:9px 14px;border-radius:8px;cursor:pointer}
+
+    /* dark mode */
+    body.dark{background:var(--dark-bg);color:var(--dark-text)}
+    body.dark .panel{background:var(--dark-panel)}
+
+    @media(max-width:900px){
+      .app{flex-direction:column;padding:8px}
+      .sidebar{width:100%;order:2}
+      .chat{order:1}
+    }
   </style>
 </head>
 <body>
   <div id="root">
+    <!-- AUTH -->
     <div id="auth" style="display:none;max-width:480px;margin:30px auto;padding:18px;background:#fff;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,0.06)">
       <h2 id="auth-title">Inicia sesión</h2>
       <div id="login-form">
@@ -48,6 +130,7 @@
       <div id="auth-msg" style="color:#b00;margin-top:8px"></div>
     </div>
 
+    <!-- APP -->
     <div class="app" id="app" style="display:none;min-height:0">
       <aside class="sidebar panel">
         <div class="top">
@@ -85,7 +168,9 @@
           <button id="create-group-btn" class="btn">Crear</button>
         </div>
 
-        <div class="list" id="contacts-list"></div>
+        <div class="list" id="contacts-list">
+          <!-- dynamic list -->
+        </div>
       </aside>
 
       <main class="chat panel">
@@ -111,7 +196,143 @@
     </div>
   </div>
 
+  <div id="emoji-picker" style="display:none;position:fixed;right:24px;bottom:80px;background:#fff;padding:10px;border-radius:8px;box-shadow:0 8px 30px rgba(0,0,0,0.12)"></div>
+
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/main.js"></script>
+  <script>
+    const socket = io();
+    let me = null; let current = { type: 'global' };
+    const EMOJIS = ['😀','😂','😍','😅','😎','👍','🔥','❤️','🎉','🤝','👏','🤖','🙌','😢','😡','🤩'];
+
+    async function api(path, method='GET', body){
+      const opts = { method, headers: {}, credentials: 'include' };
+      if(body){ opts.headers['Content-Type']='application/json'; opts.body = JSON.stringify(body); }
+      try{ const res = await fetch('/api'+path, opts); return await res.json(); }catch(e){ console.error('API error',e); return null; }
+    }
+
+    // AUTH UI
+    document.getElementById('show-register').addEventListener('click', ()=>{ document.getElementById('login-form').style.display='none'; document.getElementById('register-form').style.display='block'; });
+    document.getElementById('show-login').addEventListener('click', ()=>{ document.getElementById('login-form').style.display='block'; document.getElementById('register-form').style.display='none'; });
+
+    document.getElementById('login-btn').addEventListener('click', async ()=>{
+      const u = document.getElementById('login-username').value.trim(); const p = document.getElementById('login-password').value.trim();
+      if(!u||!p){ document.getElementById('auth-msg').textContent='Completa usuario y contraseña'; return; }
+      const r = await api('/login','POST',{ username:u, password:p });
+      if(!r){ document.getElementById('auth-msg').textContent='Error servidor'; return; }
+      if(r.error){ document.getElementById('auth-msg').textContent = r.error; return; }
+      await initAfterAuth();
+    });
+
+    document.getElementById('reg-btn').addEventListener('click', async ()=>{
+      const u = document.getElementById('reg-username').value.trim(); const p = document.getElementById('reg-password').value.trim();
+      if(!u||!p){ document.getElementById('auth-msg').textContent='Completa usuario y contraseña'; return; }
+      const r = await api('/register','POST',{ username:u, password:p });
+      if(!r){ document.getElementById('auth-msg').textContent='Error servidor'; return; }
+      if(r.error){ document.getElementById('auth-msg').textContent = r.error; return; }
+      await initAfterAuth();
+    });
+
+    async function checkSession(){ const r = await api('/me'); if(r && r.user){ await initAfterAuth(); } else { document.getElementById('auth').style.display='block'; document.getElementById('app').style.display='none'; } }
+
+    async function initAfterAuth(){ const r = await api('/me'); if(!r || !r.user){ document.getElementById('auth').style.display='block'; document.getElementById('app').style.display='none'; return; }
+      me = r.user; document.getElementById('me-name').textContent = me.username; document.getElementById('me-presence').textContent = 'En línea';
+      if(me.avatar){ document.getElementById('me-avatar-img').src = me.avatar; document.getElementById('me-avatar-img').style.display='block'; document.getElementById('me-avatar-initial').style.display='none'; }
+      if(me.description) document.getElementById('me-desc').textContent = me.description;
+      document.getElementById('auth').style.display='none'; document.getElementById('app').style.display='flex';
+      socket.emit('online', me.id);
+      bindUI(); await refreshAll(); setInterval(refreshAll,5000);
+    }
+
+    function bindUI(){
+      document.getElementById('add-contact-btn').onclick = async ()=>{
+        const username = document.getElementById('add-contact-name').value.trim(); if(!username) return alert('Escribe un usuario');
+        const r = await api('/add-contact','POST',{ to: username }); if(r && r.error) return alert(r.error); document.getElementById('add-contact-name').value=''; alert('Solicitud enviada');
+      };
+
+      document.getElementById('create-group-btn').onclick = async ()=>{ const name = document.getElementById('new-group-name').value.trim(); if(!name) return alert('Nombre requerido'); const r = await api('/groups/create','POST',{ name, members: [] }); if(r && r.error) return alert(r.error); document.getElementById('new-group-name').value=''; await loadGroups(); };
+
+      document.getElementById('send-btn').onclick = sendMessage;
+      document.getElementById('message-input').addEventListener('keydown', (e)=>{ if(e.key==='Enter') sendMessage(); });
+
+      document.getElementById('logout-btn').onclick = async ()=>{ await api('/logout','POST'); location.reload(); };
+
+      document.getElementById('change-avatar').onclick = ()=>{ document.getElementById('avatar-file').click(); };
+      document.getElementById('avatar-file').addEventListener('change', async (e)=>{
+        const f = e.target.files[0]; if(!f) return; const reader = new FileReader(); reader.onload = async ()=>{
+          const dataUrl = reader.result; const r = await api('/me/profile','POST',{ avatar: dataUrl }); if(r && r.ok){ document.getElementById('me-avatar-img').src = dataUrl; document.getElementById('me-avatar-img').style.display='block'; document.getElementById('me-avatar-initial').style.display='none'; }
+        }; reader.readAsDataURL(f);
+      });
+
+      document.getElementById('edit-desc').onclick = async ()=>{
+        const desc = prompt('Escribe una descripción (visible en tu perfil):', document.getElementById('me-desc').textContent || '');
+        if(desc!==null){ const r = await api('/me/profile','POST',{ description: desc }); if(r && r.ok){ document.getElementById('me-desc').textContent = desc; } }
+      };
+
+      document.getElementById('toggle-dark').onclick = ()=>{ document.body.classList.toggle('dark'); };
+
+      // emoji picker
+      const picker = document.getElementById('emoji-picker'); picker.innerHTML=''; EMOJIS.forEach(e=>{ const b=document.createElement('button'); b.textContent=e; b.style.border='none'; b.style.background='transparent'; b.style.fontSize='20px'; b.style.margin='4px'; b.onclick = ()=>{ const input = document.getElementById('message-input'); input.value += e; picker.style.display='none'; input.focus(); }; picker.appendChild(b); });
+      document.getElementById('emoji-btn').onclick = ()=>{ const p = document.getElementById('emoji-picker'); p.style.display = p.style.display === 'block' ? 'none' : 'block'; };
+    }
+
+    async function refreshAll(){ await loadContacts(); await loadGroups(); await updateUserCount(); }
+
+    async function loadContacts(){ const cs = await api('/contacts'); const list = document.getElementById('contacts-list'); list.innerHTML='';
+      // global
+      const g = document.createElement('div'); g.className='item'; g.innerHTML = `<div style="width:40px"><div class="logo">G</div></div><div class="meta"><div class="title">Global</div><div class="small">Chat público</div></div>`; g.onclick = ()=> openGlobal(); list.appendChild(g);
+
+      // groups label
+      const grpLabel = document.createElement('div'); grpLabel.className='small'; grpLabel.style.margin='8px 8px 4px 8px'; grpLabel.textContent='Grupos'; list.appendChild(grpLabel);
+
+      // groups will be inserted by loadGroups to keep order
+      // contacts label
+      const contLabel = document.createElement('div'); contLabel.className='small'; contLabel.style.margin='8px 8px 4px 8px'; contLabel.textContent='Contactos'; list.appendChild(contLabel);
+
+      if(Array.isArray(cs)){
+        cs.forEach(c=>{
+          const el = document.createElement('div'); el.className='item';
+          el.innerHTML = `<div style="width:44px"><div class="me-avatar">${c.avatar?'<img src="'+c.avatar+'"/>':(c.username[0].toUpperCase())}</div></div><div class="meta"><div class="title">${c.username} ${c.online?'<span style="color:#34d859">●</span>':''}</div><div class="small">${c.online? 'En línea' : 'Desconectado'}</div></div>`;
+          el.onclick = ()=> openPrivate(c.id,c.username);
+          list.appendChild(el);
+        });
+      }
+    }
+
+    async function loadGroups(){ const groups = await api('/groups'); if(!Array.isArray(groups)) return; const list = document.getElementById('contacts-list'); // remove existing group items
+      Array.from(list.querySelectorAll('.group-item')).forEach(n=>n.remove());
+      groups.forEach(g=>{
+        const el = document.createElement('div'); el.className='item group-item'; el.innerHTML = `<div style="width:44px"><div class="me-avatar">#</div></div><div class="meta"><div class="title">${g.name}</div><div class="small">${g.members.length} miembros</div></div>`;
+        el.onclick = ()=> openGroup(g.id,g.name);
+        // insert before contacts label
+        const contLabel = Array.from(list.children).find(ch => ch.textContent === 'Contactos');
+        if(contLabel) list.insertBefore(el, contLabel);
+        else list.appendChild(el);
+      });
+    }
+
+    async function openGlobal(){ current = { type:'global' }; document.getElementById('chat-name').textContent='Global'; document.getElementById('chat-sub').textContent='Chat público'; document.getElementById('messages').innerHTML=''; const msgs = await api('/messages'); if(Array.isArray(msgs)) msgs.forEach(render); scrollBottom(); socket.emit('join_group',0); }
+
+    async function openPrivate(id,name){ current = { type:'private', withId:id }; document.getElementById('chat-name').textContent = name; document.getElementById('chat-sub').textContent = 'Chat privado'; document.getElementById('messages').innerHTML=''; const msgs = await api('/private/'+id); if(Array.isArray(msgs)) msgs.forEach(render); scrollBottom(); socket.emit('join_private',{ me: me.id, other: id }); }
+
+    async function openGroup(id,name){ current = { type:'group', id, name }; document.getElementById('chat-name').textContent = name; document.getElementById('chat-sub').textContent='Grupo'; document.getElementById('messages').innerHTML=''; const msgs = await api('/groups/messages/'+id); if(Array.isArray(msgs)) msgs.forEach(render); scrollBottom(); socket.emit('join_group', id); }
+
+    function render(m){ const box = document.getElementById('messages'); const el = document.createElement('div'); const isMe = me && ((m.user_id && m.user_id===me.id) || (m.from && m.from===me.id)); el.className = 'msg ' + (isMe? 'me':'other'); const meta = document.createElement('div'); meta.className='meta'; meta.textContent = (m.username || m.fromName || ('User '+(m.from||m.user_id||''))) + ' • ' + new Date(m.created_at).toLocaleString(); const body = document.createElement('div'); body.textContent = m.text || ''; el.appendChild(meta); el.appendChild(body); box.appendChild(el); }
+
+    function scrollBottom(){ const box=document.getElementById('messages'); setTimeout(()=>{ box.scrollTop = box.scrollHeight; },50); }
+
+    async function sendMessage(){ const input = document.getElementById('message-input'); const text = input.value.trim(); if(!text) return; input.value=''; if(current.type==='global'){ await api('/messages','POST',{ text }); } else if(current.type==='private'){ await api('/private/send','POST',{ to: current.withId, text }); } else if(current.type==='group'){ await api('/groups/send','POST',{ group_id: current.id, text }); } }
+
+    socket.on('message',(m)=>{ if(current.type==='global'){ render(m); scrollBottom(); } });
+    socket.on('private_message',(m)=>{ if(current.type==='private' && (m.from===current.withId || m.to===current.withId)){ render(m); scrollBottom(); } else { loadContacts(); } });
+    socket.on('group_message',(m)=>{ if(current.type==='group' && m.group_id===current.id){ render(m); scrollBottom(); } else { loadGroups(); } });
+    socket.on('presence_update',(p)=>{ loadContacts(); updateUserCount(); });
+    socket.on('friend_request',(d)=>{ // simple notification
+      if(me && d.toId === me.id){ alert('Nueva solicitud de amistad de ' + d.fromName); }
+    });
+
+    async function updateUserCount(){ const cs = await api('/contacts'); const online = (cs||[]).filter(x=>x.online).length; document.getElementById('user-count').textContent = online + ' online'; }
+
+    (async ()=>{ await checkSession(); })();
+  </script>
 </body>
 </html>
